# zgraphify

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  SECURITY.md  pyproject.toml
.agents/skills/architecture-doc-builder/: README.md  SKILL.md
.agents/skills/confluence/: SKILL.md
.agents/skills/conformance/: SKILL.md
.agents/skills/doc-check/: SKILL.md
.agents/skills/feature-doc-builder/: README.md  SKILL.md
.agents/skills/gh-issue/: README.md  SKILL.md
.agents/skills/gh-stack/: SKILL.md
.agents/skills/gh-stack/references/: single-worktree-lane.md
.agents/skills/gh-wiki/: SKILL.md
.agents/skills/handoff/: SKILL.md
.agents/skills/jira/: README.md  SKILL.md
.agents/skills/pr-builder/: PR-TEMPLATE.md  README.md  SKILL.md
.agents/skills/pr-review/: README.md  SKILL.md  code-review-graph.md  shared-rules.md  spec-axis.md  standards-axis.md
.agents/skills/proposal-builder/: README.md  SKILL.md
.agents/skills/psql/: SKILL.md
.agents/skills/qa-testing/: SKILL.md  VERIFICATION-EVIDENCE-TEMPLATE.md
.agents/skills/spec-builder/: README.md  SKILL.md  regular-branch-workflow.md  regular-specification-template.md  stacked-branch-workflow.md  stacked-specification-template.md
.agents/skills/spec-builder/references/: spec-driven-development-methodology.md
.agents/skills/spec-driven/: SKILL.md
.agents/skills/sqlcmd/: SKILL.md
.agents/skills/standard-builder/: SKILL.md
.agents/skills/standard-builder/agents/: openai.yaml
.agents/skills/worktree/: README.md  SKILL.md
.agents/skills/zazz-board/: README.md  SKILL.md
.agents/skills/zazz-board/scripts/: README.md  zazzctl.mjs
.zazz/: .gitignore  project.md  zazz-methodology.md  zgraphify-agent-orientation.md
.zazz/architecture/: README.md  index.yaml  ladybug-db-integration-architecture.md
.zazz/docs/: README.md  agent-execution-discipline.md  code-review-graph.md  human-in-loop-pr-review-strategy.md  using-gh-stack.md  worktree-setup.md  wt-cheat-sheet.md  zgraphify-agent-orientation.md
.zazz/docs/methodology/: README.md  architecture.md  code-generation.md  deterministic-quality.md  document-storage.md  features-and-milestones.md  pr-creation.md  project.md  proposals.md  self-review.md  spec-driven-development.md  specifications.md  testing-and-validation.md
.zazz/docs/proposals/: shared-file-coordination-framework-proposal.md
.zazz/docs/standards/: README.md  agent-skills.md  backend-entrypoint-initialization-guide.md  ci-llm-conformance-workflows.md  contextual-split.md  data-layer-results.md  data-layer-utilities.md  database-guide.md  database-migrations-and-modernization.md  database-modernization-approach.md  database-sproc-shape.md  database-testing-guide.md  docs-hygiene-reference-structure.md  frontend-hook-design.md  frontend.md  http-layer-guide.md  http-layer.md  pr-process.md  python-testing-http-behavior.md  reports.md  security.md  service-layer-data-and-exceptions.md  service-layer.md  settings.md
.zazz/features/: index.yaml  ladybug-db-integration.md
.zazz/proposals/: ladybug-db-integration.md
.zazz/standards/: backend-lambda-deployment-guide.md  ci-workflows.md  code-structure.md  data-layer-errors.md  data-layer-exec-sproc.md  data-layer-guide.md  data-layer-sproc-examples.md  data-layer-templates.md  data-layer.md  database-sproc-errors.md  database-testing.md  database.md  deployment.md  docs-hygiene.md  frontend-admin-crud-guide.md  frontend-forms-ui.md  http-layer-docs-and-tests.md  http-layer-errors-and-auth.md  http-layer-schemas-and-responses.md  index.yaml  logging-observability.md  logging-runtime-behavior.md  python-testing-guide.md  python-testing.md  report-test-strategy.md  service-layer-guide.md  service-layer-modules-and-cli.md  spec-hygiene.md  tooling-hooks-and-formatters.md  tooling-lint-format.md
docs/: how-it-works.md  node-summaries-rfc.md
docs/superpowers/specs/: 2026-05-04-incremental-updates-dedup-design.md
docs/translations/: README.he-IL.md
graphify/: __init__.py  __main__.py  analyze.py  benchmark.py  build.py  cache.py  cli.py  dedup.py  detect.py  export.py  extract.py  global_graph.py  hooks.py  ingest.py  llm.py  pascal_resolution.py  paths.py  pg_introspect.py  prs.py  querylog.py  reflect.py  security.py  semantic_cleanup.py  serve.py  skill-agents.md  skill-aider.md  skill-amp.md  skill-claw.md  skill-codex.md  skill-copilot.md  skill-devin.md  skill-droid.md  skill-kiro.md  skill-opencode.md  skill-pi.md  skill-trae.md  skill-vscode.md  skill-windows.md  skill.md  symbol_resolution.py  (+4 more)
graphify/extractors/: csharp.py  engine.py  json_config.py  pascal.py
tests/: bench_query_scoring.py  test_analyze.py  test_atomic_writes.py  test_benchmark.py  test_build.py  test_cache.py  test_case_sensitive_resolution.py  test_chunking.py  test_cli_export.py  test_corrupt_graph_json.py  test_csharp_member_calls.py  test_csharp_type_resolution.py  test_detect.py  test_devin.py  test_dotnet.py  test_evidence_binding.py  test_export.py  test_extract.py  test_extract_cache_location.py  test_extract_cli.py  test_file_node_id_spec.py  test_hook_guard.py  test_hooks.py  test_hypergraph.py  test_image_vision.py  test_incomplete_build_guard.py  test_indirect_dispatch.py  test_ingest.py  test_install_strings.py  test_install_upgrade.py  test_java_member_calls.py  test_java_type_resolution.py  test_js_import_resolution.py  test_languages.py  test_llm_backends.py  test_merge_graphs_cli.py  test_multilang.py  test_pascal.py  test_pascal_call_scoping.py  test_pascal_resolution.py  (+16 more)
tests/fixtures/: sample.cls  sample.csproj  sample.go  sample.groovy  sample.kt  sample.luau  sample.metal  sample.php  sample.razor  sample.rs  sample.sln  sample.swift  sample.trigger  sample.vb  sample_scoped_calls.pas  sample_spock.groovy  typescript_advanced.ts
tests/fixtures/pascal_cross_file/: BaseGadget.pas  DerivedGadget.pas  OtherGadget.pas
tools/skillgen/: gen.py  platforms.toml
tools/skillgen/expected/: graphify__skill-aider.md  graphify__skill-kilo.md  graphify__skill-trae.md
tools/skillgen/fragments/core/: core.md
